<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
        <modelVersion>4.0.0</modelVersion>

       <groupId>com.github.bbottema</groupId>

        <artifactId>java-socks-proxy-server</artifactId>
        <packaging>jar</packaging>
        <name>java-socks-proxy-server</name>
        <version>3.0.0</version>
        <description>java-socks-proxy-server is a SOCKS 4/5 server for Java</description>
        <url>https://github.com/bbottema/java-socks-proxy-server</url>
        <inceptionYear>2019</inceptionYear>

        <properties>
                <license.owner.name>Benny Bottema</license.owner.name>
                <license.owner.email>benny@bennybottema.com</license.owner.email>
                <maven.compiler.release>21</maven.compiler.release>
                <log4j.version>2.22.1</log4j.version>
        </properties>

        <scm>
                <connection>scm:git:git://github.com/bbottema/java-socks-proxy-server.git</connection>
                <developerConnection>scm:git:git@github.com:bbottema/java-socks-proxy-server.git</developerConnection>
                <url>https://github.com/bbottema/java-socks-proxy-server</url>
        </scm>

        <issueManagement>
                <system>GitHub Issues</system>
                <url>https://github.com/bbottema/java-socks-proxy-server/issues</url>
        </issueManagement>

        <dependencies>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>

                <dependency>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                        <version>4.13.1</version>
                        <scope>compile</scope>
                        <optional>true</optional>
                </dependency>
                <dependency>
                        <groupId>org.apache.logging.log4j</groupId>
                        <artifactId>log4j-slf4j-impl</artifactId>
                        <version>${log4j.version}</version>
                        <scope>runtime</scope>
                        <optional>true</optional>
                </dependency>
                <dependency>
                        <groupId>org.apache.logging.log4j</groupId>
                        <artifactId>log4j-api</artifactId>
                        <version>${log4j.version}</version>
                        <scope>runtime</scope>
                        <optional>true</optional>
                </dependency>
                <dependency>
                        <groupId>org.apache.logging.log4j</groupId>
                        <artifactId>log4j-core</artifactId>
                        <version>${log4j.version}</version>
                        <scope>runtime</scope>
                </dependency>
                <dependency>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-api</artifactId>
                        <version>2.0.12</version>
                </dependency>

                <!-- JetBrains Annotations -->
                <dependency>
                        <groupId>org.jetbrains</groupId>
                        <artifactId>annotations</artifactId>
                        <version>24.1.0</version>
                </dependency>

                <!-- javax.annotation (for Nullable, etc.) -->
                <dependency>
                        <groupId>javax.annotation</groupId>
                        <artifactId>javax.annotation-api</artifactId>
                        <version>1.3.2</version>
                </dependency>
        </dependencies>

        <build>
                <plugins>
                        <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-compiler-plugin</artifactId>
                                <version>3.11.0</version>
                                <configuration>
                                        <release>${maven.compiler.release}</release>
                                </configuration>
                        </plugin>
                </plugins>
        </build>
</project>